--- a/app/src/main/res/layout/fragment_hoy.xml
+++ b/app/src/main/res/layout/fragment_hoy.xml
@@ -129,6 +129,7 @@
 
     <!-- Contenido principal -->
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
